--- a/Verifierade backups.ipynb
+++ b/Verifierade backups.ipynb
@@ -125,7 +125,7 @@
     "                SET @ErrorMessage = ERROR_MESSAGE()\n",
     "                EXEC msdb.dbo.sp_send_dbmail\n",
     "                    @profile_name = 'Profil',\n",
-    "                    @recipients = 'andreas.hoglund@sosalarm.se',\n",
+    "                    @recipients = 'andreas@roort.com',\n",
     "                    @subject = 'Backup Verification Failed',\n",
     "                    @body = 'Verification of backup file ' + @BackupFile + ' on server ' + @ServerName + ' failed. Error: ' + @ErrorMessage\n",
     "            END CATCH\n",
